<resources>
    <string name="app_name">CityLiker Beta</string>
    <string name="search_title">Поиск</string>
    <string name="menu_navigation_1">Главная</string>
    <string name="menu_navigation_2">Новости</string>
    <string name="menu_navigation_3">Голосование</string>
    <string name="menu_navigation_4">Мой кабинет</string>
    <string name="menu_navigation_5">Рейтинг городов</string>
    <string name="fragment_first_text">Привет фрагмент</string>

    <string name="view_navigation_open">Открыть</string>
    <string name="view_navigation_closed">Закрыть</string>
</resources>